Added DB, Authorization, gRPC, Security, Users, Roles and fixed forms

--- a/MySite.Api/appsettings.json
+++ b/MySite.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "host=localhost;port=5432;database=MySite;user id=postgres;password=postgres"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -10,5 +13,16 @@
     "EndpointDefaults": {
       "Protocols": "Http1AndHttp2"
     }
+  },
+  "TokenManagement": {
+    "Secret": "secret_is_star_is_super_star_top_secret",
+    "Issuer": "localhost",
+    "Audience": "audience",
+    "Lifetime": 7
+  },
+  "AdminUser": {
+    "Name": "Admin",
+    "Email": "admin@admin.com",
+    "Password": "test123456"
   }
 }
