--- a/MySite.Api/MySite.Api.csproj
+++ b/MySite.Api/MySite.Api.csproj
@@ -13,6 +13,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="AutoMapper" Version="13.0.1" />
         <PackageReference Include="Google.Protobuf" Version="3.25.2" />
         <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
         <PackageReference Include="Grpc.AspNetCore.Server" Version="2.60.0" />
