--- a/MySite.Application/MySite.Application.csproj
+++ b/MySite.Application/MySite.Application.csproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
       <PackageReference Include="MediatR" Version="11.0.0" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.2" />
     </ItemGroup>
